--- a/src/assets/css/academics.css
+++ b/src/assets/css/academics.css
@@ -8,6 +8,7 @@
     margin-bottom: 4%;
     /* padding: 1%; */
     text-align: center;
+    position: relative;
 }
 .acd-head-light {
     /* background-color: var(--fontLink); */
