--- a/src/assets/css/gigitem.css
+++ b/src/assets/css/gigitem.css
@@ -9,21 +9,68 @@
     border-radius: 5px;
     overflow: hidden;
     box-shadow: 0 0 3px 1px rgba(0,0,0,.2);
-    background-color: var(--bgLight);
     position: relative;
 }
-.gig-img {
+.gig-item-light {
+    background-color: var(--bgLight);
+}
+.gig-item-dark {}
+.gig-img-cover {
     display: flex;
-    /* width: 100%; */
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 8em;
+    /* position: absolute; */
+    overflow: hidden;
+    border: 1px solid black;
+}
+.gig-img {
     height: 100%;
-    position: absolute;
-    z-index: 2;
 }
 .gig-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 4em;
+    background-color: rgba(255,255,255,.2);
+}
+.gig-txt {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+    height: 100%;
+}
+.gig-title {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
     width: 100%;
     height: 50%;
-    position: absolute;
-    /* bottom: 0; */
-    z-index: 3;
-    background-color: rgba(255,255,255,.2);
+}
+.gig-price {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    height: 50%;
+}
+.gig-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 4em;
+    height: 2.5em;
+    color: var(--fontLink);
+    border-radius: 20px;
+    border: 1.5px solid var(--fontLink);
+}
+.gig-link-light {
+    color: var(--fontLink);
+}
+.gig-link-dark {
+    /* background-color: var(--fontLink); */
 }
