--- a/src/assets/css/academics.css
+++ b/src/assets/css/academics.css
@@ -40,13 +40,24 @@
 .acd-head-txt-dark {
     color: var(--fontLight);
 }
+.acd-link-hold {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    padding: 1%;
+    overflow-x: scroll;
+}
 .acd-links {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    width: 100%;
+    width: 98%;
     min-height: 4em;
     padding: 1%;
+    margin: 1%;
+    border-radius: 5px;
     /* font-weight: bold; */
     /* border: .1px solid black; */
 }
@@ -58,7 +69,7 @@
     background-color: rgba(0,0,0,.1);
 }
 .acd-links-dark {
-    box-shadow: 0 0 .5px .5px rgba(255,255,255,.1);
+    box-shadow: 0 0 1px 1px rgba(255,255,255,.2);
     color: var(--fontLight);
 }
 .acd-links-dark:active {
