--- a/src/assets/css/books.css
+++ b/src/assets/css/books.css
@@ -8,28 +8,34 @@
 .books {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: flex-start;
     align-items: center;
     width: 100%;
-    height: 100vh;
-    position: fixed;
-    bottom: 0;
+    height: 100%;
+    /* position: fixed; */
+    /* bottom: 0; */
     z-index: 5;
+}
+.books-light {
+    background-color: white;
+}
+.books-dark {
+    background-color: var(--bgDark);
 }
 .bks-hold {
     display: flex;
     flex-direction: column;
     width: 100%;
-    max-height: 80%;
+    height: 80%;
     padding: .5em 0;
     z-index: 7;
     overflow: hidden;
     border-radius: 15px 15px 0 0;
-    position: absolute;
-    animation-name: bks-anime;
+    /* position: absolute; */
+    /* animation-name: bks-anime;
     animation-duration: .5s;
     animation-timing-function: ease-out;
-    animation-fill-mode: forwards;
+    animation-fill-mode: forwards; */
 }
 .bks-hold-light {
     color: var(--fontDark);
