--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -16,7 +16,7 @@
 .base {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     /* background-color: grey; */
     height: 100%;
