--- a/src/assets/css/profile.css
+++ b/src/assets/css/profile.css
@@ -1,10 +1,10 @@
 .info-card {
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     justify-content: flex-start;
     align-items: center;
     width: 100%;
-    /* padding: 2%; */
+    padding: 2%;
     /* font-size: 15px; */
 }
 .info-card-light {
@@ -19,46 +19,24 @@
     justify-content: center;
     align-items: center;
     /* height: 4em; */
-    width: 100%;
-    border: 1px solid black;
+    /* width: 100%; */
+    margin: 0 2%;
+    /* border: 1px solid black; */
     position: relative;
-}
-/* .pro-cover {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    height: 8em;
-    position: relative;
-    border: 1px solid black;
-    left: 0;
-} */
-.cover-frame {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 7.5em;
-    /* border: 1px solid white; */
-    overflow: hidden;
-}
-.cover-img {
-    width: 100%;
-    /* height: 100%; */
 }
 .pro-avatar-cover {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 6em;
-    height: 6em;
+    width: 8em;
+    height: 8em;
+    margin: 1%;
     border-radius: 50%;
     color: teal;
     overflow: hidden;
-    position: absolute;
+    /* position: absolute; */
     /* left: 3%; */
-    bottom: -30%;
+    /* bottom: -30%; */
     box-shadow: 0 0 1px 1px rgba(0,0,0,.1);
 }
 .pro-avatar-cover-light {
@@ -75,13 +53,25 @@
     /* width: 100%; */
     height: 100%;
 }
+.user-links {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 3em;
+    /* margin: 1% auto; */
+    padding: 0 1%;
+    /* border-radius: 5px; */
+    /* border-bottom: 1px solid rgba(0,0,0,.05) */
+}
 .user-titles {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
-    padding: 1% 2%;
+    padding: 1% 1%;
     margin: 4% 3%;
     /* border: 1px solid black; */
 }
@@ -110,7 +100,7 @@
 }
 .collection {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     align-items: center;
     /* width: 100%; */
     /* border: 1px solid black; */
@@ -141,17 +131,6 @@
     /* border: 1px; */
     /* color: white; */
     /* border: 1px solid black; */
-}
-.user-links {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    width: 100%;
-    height: 3em;
-    /* margin: 1% auto; */
-    padding: 0 1%;
-    /* border-radius: 5px; */
-    border-bottom: 1px solid rgba(0,0,0,.05);
 }
 .u-link-cover {
     display: flex;
