--- a/src/assets/css/statusbar.css
+++ b/src/assets/css/statusbar.css
@@ -8,7 +8,7 @@
     position: fixed;
     top: 0;
     /* padding: 0 2%; */
-    z-index: 1;
+    /* z-index: 1; */
     box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, .05);
 }
 .topBar {
