--- a/src/assets/css/menu.css
+++ b/src/assets/css/menu.css
@@ -16,7 +16,7 @@
     position: fixed;
     top: 0;
     right: 0;
-    z-index: 3;
+    /* z-index: 3; */
     height: 100vh;
     width: 100%;
     border: 1px solid black;
